# Vasitos-Whisper-Bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
