[project]
name = "VasitosWhisperBot"
version = "0.1.0"
description = "VasitosWhisperBot"
requires-python = ">=3.11,<3.13"
dependencies = [
    "discord-py-interactions[voice]",
    "redis[hiredis]",
    "python-dotenv",
    # "discord-ext-voice-recv",
    # "discord.py[voice]",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py312"
